  
syntax = "proto3";

package crud; 

service Crud {
  rpc CreateItem (Employee) returns (ID) {}
  rpc GetItem (ID) returns (Employee) {}
  rpc UpdateItem (Employee) returns (ID) {}
  rpc DeleteItem (ID) returns (ID) {}
}

message Employee {
  string id = 1;
  string name = 2;
}

message ID {
  string id = 1;
}